--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,3 +27,7 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/images/dwarf_warrior/idle/
+    - assets/images/dwarf_warrior/walk/
+    - assets/images/alchemist/
+    - assets/images/blacksmith/
