--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
 
   cupertino_icons: ^1.0.6
   bonfire: ^3.10.5
+  toastification: ^2.3.0
 
 dev_dependencies:
   flutter_test:
@@ -31,3 +32,4 @@ flutter:
     - assets/images/dwarf_warrior/walk/
     - assets/images/alchemist/
     - assets/images/blacksmith/
+    - assets/images/input/
