--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,9 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.6
   bonfire: ^3.11.0
+  cupertino_icons: ^1.0.6
+  material_design_icons_flutter: ^7.0.7296
   toastification: ^2.3.0
 
 dev_dependencies:
