--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
           "canvaskit",
           "--dart-define=ASSERTIONS=true"
         ],
-        "program": "lib/presentation/main.dart",
+        "program": "lib/main.dart",
         "flutterMode": "debug",
         "additionalArgs": [
           "--web-browser-flag=--enable-features=PlatformAssertions",
