--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   toastification: ^2.3.0
   flutter_riverpod: ^2.6.1
   gap: ^3.0.1
+  lottie: ^3.1.3
 
 dev_dependencies:
   flutter_test:
@@ -30,6 +31,7 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/lotties/
 
     # Alchemist
     - assets/images/alchemist/
