--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_riverpod: ^2.6.1
   gap: ^3.0.1
   lottie: ^3.1.3
+  flame_audio: ^2.10.2
 
 dev_dependencies:
   flutter_test:
@@ -30,6 +31,7 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/audio/
     - assets/images/
     - assets/lotties/
 
