--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_riverpod: ^2.6.1
   gap: ^3.0.1
   lottie: ^3.1.3
+  mockito: ^5.4.4
 
 dev_dependencies:
   flutter_test:
