--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,11 @@ dev_dependencies:
   flutter_lints: ^3.0.0
 
 flutter:
+  fonts:
+    - family: adventure
+      fonts:
+        - asset: fonts/adventure.otf
+
   uses-material-design: true
 
   assets:
