--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_riverpod: ^2.6.1
   gap: ^3.0.1
   lottie: ^3.1.3
+  flame_audio: ^2.10.2
 
 dev_dependencies:
   flutter_test:
@@ -28,6 +29,11 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  fonts:
+    - family: adventure
+      fonts:
+        - asset: fonts/adventure.otf
 
   assets:
     - assets/audio/
