--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: "A new Flutter project."
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+1
+version: 25.9.1+2
 
 environment:
   sdk: ">=3.4.4 <4.0.0"
@@ -19,15 +19,17 @@ dependencies:
   flutter:
     sdk: flutter
 
-  bonfire: ^3.12.3
+  bonfire: ^3.15.1
   cupertino_icons: ^1.0.8
-  material_design_icons_flutter: ^7.0.7296
-  toastification: ^2.3.0
+  flame_audio: ^2.10.2
   flutter_riverpod: ^2.6.1
   gap: ^3.0.1
-  lottie: ^3.1.3
+  logger: ^2.6.1
+  lottie: ^3.3.0
+  material_design_icons_flutter: ^7.0.7296
   mockito: ^5.4.4
-  flame_audio: ^2.10.2
+  toastification: ^3.0.3
+  window_pain: ^0.0.2
 
 dev_dependencies:
   flutter_test:
